--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1,4 +1,7 @@
+@import "compass/css3";
+
 @import "partials/layout";
 @import "partials/typography";
 @import "partials/forms";
 @import "partials/pagination";
+@import "partials/content";
