--- a/app/webroot/css/screen.css
+++ b/app/webroot/css/screen.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 /* line 1, ../../sass/partials/_typography.scss */
-body {
+body, input {
   font-family: "Segoe UI", Verdana, sans-serif;
 }
 
@@ -46,6 +46,11 @@ label {
   display: none;
 }
 
+/* line 23, ../../sass/partials/_forms.scss */
+.navbar-form input {
+  margin-top: 2px;
+}
+
 /* line 1, ../../sass/partials/_pagination.scss */
 .pagination-counter {
   font-size: 12px;
@@ -62,7 +67,7 @@ label {
 }
 /* line 6, ../../sass/partials/_content.scss */
 #daily-header .actions {
-  margin-top: 4px;
+  margin-top: 6px;
   margin-left: 10px;
 }
 
@@ -127,49 +132,45 @@ label {
   text-shadow: 0px 1px 1px #fff;
   color: #444;
 }
-/* line 47, ../../sass/partials/_content.scss */
-.user-program-header h3 a:hover {
-  text-decoration: none;
-}
-/* line 52, ../../sass/partials/_content.scss */
+/* line 49, ../../sass/partials/_content.scss */
 .user-program-header .user-program-remove {
   float: right;
   margin: 4px;
 }
 
-/* line 59, ../../sass/partials/_content.scss */
+/* line 56, ../../sass/partials/_content.scss */
 .user-program-body {
   border-top: 2px solid #f0f0f0;
 }
-/* line 61, ../../sass/partials/_content.scss */
+/* line 58, ../../sass/partials/_content.scss */
 .user-program-body .table {
   margin-bottom: 0;
 }
-/* line 63, ../../sass/partials/_content.scss */
+/* line 60, ../../sass/partials/_content.scss */
 .user-program-body .table th {
   font-size: 12px;
   font-weight: normal;
   color: #999;
 }
-/* line 68, ../../sass/partials/_content.scss */
+/* line 65, ../../sass/partials/_content.scss */
 .user-program-body .table td {
   font-size: 14px;
 }
-/* line 70, ../../sass/partials/_content.scss */
+/* line 67, ../../sass/partials/_content.scss */
 .user-program-body .table td a:hover {
   text-decoration: none;
 }
-/* line 74, ../../sass/partials/_content.scss */
+/* line 71, ../../sass/partials/_content.scss */
 .user-program-body .table a[rel=popover] {
   font-weight: bold;
 }
 
-/* line 79, ../../sass/partials/_content.scss */
+/* line 76, ../../sass/partials/_content.scss */
 .user-program-actions {
   width: 35px;
 }
 
-/* line 82, ../../sass/partials/_content.scss */
+/* line 79, ../../sass/partials/_content.scss */
 .user-program-photo {
   float: left;
   width: 24px;
@@ -180,7 +181,7 @@ label {
   box-shadow: 1px 1px 3px #aaaaaa;
 }
 
-/* line 90, ../../sass/partials/_content.scss */
+/* line 87, ../../sass/partials/_content.scss */
 .user-program-footer {
   padding: 8px;
   -moz-border-radius-bottomleft: 5px;
