Mixing Users programs and Training programs in the daily view

--- a/app/sass/partials/_content.scss
+++ b/app/sass/partials/_content.scss
@@ -22,16 +22,10 @@
 	overflow: hidden;
 }
 
-#users-daily {
-	float: left;
-	width: 73%;
-}
-
-
 #usersList {
 	width: 100%;
 }
-.user-program {
+.program {
 	display: block;
 	width: 300px;
 	float: left;
