--- a/app/webroot/css/screen.css
+++ b/app/webroot/css/screen.css
@@ -88,18 +88,12 @@ label {
 }
 
 /* line 25, ../../sass/partials/_content.scss */
-#users-daily {
-  float: left;
-  width: 73%;
-}
-
-/* line 31, ../../sass/partials/_content.scss */
 #usersList {
   width: 100%;
 }
 
-/* line 34, ../../sass/partials/_content.scss */
-.user-program {
+/* line 28, ../../sass/partials/_content.scss */
+.program {
   display: block;
   width: 300px;
   float: left;
@@ -115,7 +109,7 @@ label {
   box-shadow: 1px 1px 5px #eeeeee;
 }
 
-/* line 44, ../../sass/partials/_content.scss */
+/* line 38, ../../sass/partials/_content.scss */
 .user-program-header {
   overflow: hidden;
   padding: 8px;
@@ -133,56 +127,56 @@ label {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #bbb;
 }
-/* line 51, ../../sass/partials/_content.scss */
+/* line 45, ../../sass/partials/_content.scss */
 .user-program-header h3 {
   float: left;
   margin-left: 10px;
 }
-/* line 54, ../../sass/partials/_content.scss */
+/* line 48, ../../sass/partials/_content.scss */
 .user-program-header h3 a {
   text-shadow: 0px 1px 1px #fff;
   color: #08c;
 }
-/* line 59, ../../sass/partials/_content.scss */
+/* line 53, ../../sass/partials/_content.scss */
 .user-program-header .user-program-remove {
   float: right;
   margin: 4px;
 }
 
-/* line 66, ../../sass/partials/_content.scss */
+/* line 60, ../../sass/partials/_content.scss */
 .user-program-body {
   border-top: 2px solid #f0f0f0;
 }
-/* line 68, ../../sass/partials/_content.scss */
+/* line 62, ../../sass/partials/_content.scss */
 .user-program-body .table {
   margin-bottom: 0;
 }
-/* line 70, ../../sass/partials/_content.scss */
+/* line 64, ../../sass/partials/_content.scss */
 .user-program-body .table th {
   font-size: 12px;
   font-weight: normal;
   color: #999;
 }
-/* line 75, ../../sass/partials/_content.scss */
+/* line 69, ../../sass/partials/_content.scss */
 .user-program-body .table td {
   font-size: 14px;
 }
-/* line 77, ../../sass/partials/_content.scss */
+/* line 71, ../../sass/partials/_content.scss */
 .user-program-body .table td a:hover {
   text-decoration: none;
 }
-/* line 81, ../../sass/partials/_content.scss */
+/* line 75, ../../sass/partials/_content.scss */
 .user-program-body .table a[rel=popover] {
   font-weight: bold;
   color: #000;
 }
 
-/* line 87, ../../sass/partials/_content.scss */
+/* line 81, ../../sass/partials/_content.scss */
 .user-program-actions {
   width: 35px;
 }
 
-/* line 90, ../../sass/partials/_content.scss */
+/* line 84, ../../sass/partials/_content.scss */
 .user-program-photo {
   float: left;
   width: 24px;
@@ -193,7 +187,7 @@ label {
   box-shadow: 1px 1px 3px #aaaaaa;
 }
 
-/* line 98, ../../sass/partials/_content.scss */
+/* line 92, ../../sass/partials/_content.scss */
 .user-program-footer {
   padding: 8px;
   -moz-border-radius-bottomleft: 5px;
@@ -210,35 +204,35 @@ label {
   border-top: 1px solid #ccc;
 }
 
-/* line 105, ../../sass/partials/_content.scss */
+/* line 99, ../../sass/partials/_content.scss */
 .dd-hover {
   cursor: pointer;
   background: #eee;
 }
 
-/* line 110, ../../sass/partials/_content.scss */
+/* line 104, ../../sass/partials/_content.scss */
 dd.last-update, li.last-update {
   background: #DFF0D8;
 }
 
-/* line 114, ../../sass/partials/_content.scss */
+/* line 108, ../../sass/partials/_content.scss */
 .table-striped tbody tr.last-update td {
   background: #DFF0D8;
 }
 
-/* line 119, ../../sass/partials/_content.scss */
+/* line 113, ../../sass/partials/_content.scss */
 #training-plans {
   float: right;
   width: 25%;
   border-left: 1px dashed #999;
   padding-left: 18px;
 }
-/* line 124, ../../sass/partials/_content.scss */
+/* line 118, ../../sass/partials/_content.scss */
 #training-plans h2 {
   margin-bottom: 18px;
 }
 
-/* line 128, ../../sass/partials/_content.scss */
+/* line 122, ../../sass/partials/_content.scss */
 .training-plan {
   margin-bottom: 20px;
   border: 1px solid #ddd;
@@ -252,7 +246,7 @@ dd.last-update, li.last-update {
   box-shadow: 1px 1px 5px #eeeeee;
 }
 
-/* line 134, ../../sass/partials/_content.scss */
+/* line 128, ../../sass/partials/_content.scss */
 .training-plan-header {
   overflow: hidden;
   padding: 8px;
@@ -270,63 +264,63 @@ dd.last-update, li.last-update {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #bbb;
 }
-/* line 141, ../../sass/partials/_content.scss */
+/* line 135, ../../sass/partials/_content.scss */
 .training-plan-header h3 {
   float: left;
   margin-left: 5px;
 }
-/* line 144, ../../sass/partials/_content.scss */
+/* line 138, ../../sass/partials/_content.scss */
 .training-plan-header h3 a {
   text-shadow: 0px 1px 1px #fff;
   color: #08c;
 }
-/* line 149, ../../sass/partials/_content.scss */
+/* line 143, ../../sass/partials/_content.scss */
 .training-plan-header .training-plan-toggle {
   float: right;
   margin: 4px;
 }
 
-/* line 154, ../../sass/partials/_content.scss */
+/* line 148, ../../sass/partials/_content.scss */
 .training-plan-body {
   border-top: 2px solid #f0f0f0;
 }
-/* line 156, ../../sass/partials/_content.scss */
+/* line 150, ../../sass/partials/_content.scss */
 .training-plan-body .table {
   margin-bottom: 0;
 }
-/* line 158, ../../sass/partials/_content.scss */
+/* line 152, ../../sass/partials/_content.scss */
 .training-plan-body .table th {
   font-size: 12px;
   font-weight: normal;
   color: #999;
 }
-/* line 163, ../../sass/partials/_content.scss */
+/* line 157, ../../sass/partials/_content.scss */
 .training-plan-body .table td {
   font-size: 14px;
 }
-/* line 165, ../../sass/partials/_content.scss */
+/* line 159, ../../sass/partials/_content.scss */
 .training-plan-body .table td a:hover {
   text-decoration: none;
 }
-/* line 168, ../../sass/partials/_content.scss */
+/* line 162, ../../sass/partials/_content.scss */
 .training-plan-body .table td:first-child {
   width: 100%;
 }
-/* line 171, ../../sass/partials/_content.scss */
+/* line 165, ../../sass/partials/_content.scss */
 .training-plan-body .table td:last-child {
   white-space: nowrap;
 }
-/* line 175, ../../sass/partials/_content.scss */
+/* line 169, ../../sass/partials/_content.scss */
 .training-plan-body .table a[rel=popover] {
   color: #000;
   font-weight: bold;
 }
 
-/* line 182, ../../sass/partials/_content.scss */
+/* line 176, ../../sass/partials/_content.scss */
 .training-plan-exercises {
   margin-bottom: 18px;
 }
-/* line 184, ../../sass/partials/_content.scss */
+/* line 178, ../../sass/partials/_content.scss */
 .training-plan-exercises li {
   padding: 4px;
 }
